envs/production/apps/riken-diips/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riken-diips
  namespace: riken-diips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: riken-diips
  template:
    metadata:
      labels:
        app: riken-diips
    spec:
      imagePullSecrets:
        - name: ghcr-riken-diips
      containers:
        - name: riken-diips
          image: ghcr.io/silver198545/riken-diips:0.1.0-r0
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
