envs/production/apps/riken-diips/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: riken-diips
  namespace: riken-diips
spec:
  selector:
    app: riken-diips
  ports:
    - name: http
      port: 80
      targetPort: 3000
